third_party/move/move-compiler-v2/tests/match-checks/skip_multiple.exp

Diagnostics:
error: match not exhaustive
   ┌─ tests/match-checks/skip_multiple.move:11:16
   │
11 │         match (d) {
   │                ^
   │
   = missing `Direction::East`
